--- a/content/posts/2021-09-13-MySQL徹底入門を読んで.md
+++ b/content/posts/2021-09-13-MySQL徹底入門を読んで.md
@@ -177,3 +177,10 @@ MySQLのパフォーマンス問題の多くはクエリ単位に分解して考
       - このような事態を避けるための「不可視インデックス」
         - 不可視とは、テーブル定義及びデータ構造上には存在するものの、オプティマイザから決して選択されない（= 見えない）ことを指している
         - 通常のインデックスと不可視インデックスの切り替えは一瞬で済むため、インデックスが削除されたあとに影響が出ないかを確認でき、万一影響が出たとしても切り戻しも一瞬でできる
+
+## ユーザ管理
+- グローバル権限はNG
+  - MySQL 8.0.16以降では partial_revokes オプションによってブラックリスト的に制御できるようになったが、過大な権限は危険
+  - 現実的な権限制御
+    - データベース単位で原則の権限を付与（GRANT）
+    - 必要に応じてテーブル単位で拒否（REVOKE/partial_revokes オプションが必要）
