--- a/content/posts/2021-09-13-MySQL徹底入門を読んで.md
+++ b/content/posts/2021-09-13-MySQL徹底入門を読んで.md
@@ -184,3 +184,45 @@ MySQLのパフォーマンス問題の多くはクエリ単位に分解して考
   - 現実的な権限制御
     - データベース単位で原則の権限を付与（GRANT）
     - 必要に応じてテーブル単位で拒否（REVOKE/partial_revokes オプションが必要）
+
+## MySQLのさまざまな状態をみる
+STATUSコマンド
+- 動作中のMySQLサーバーや、接続に関する基本的な情報を表示
+- Current user
+  - 接続ユーザ
+- Threads
+  - 現在MySQLサーバーに接続中のスレッド数
+- Question
+  - MySQLサーバーが起動してから発生したクエリーの数
+- Slow queries
+  - MySQLサーバーが起動してから発生したスロークエリー数
+- Opens
+  - MySQLサーバーが起動してからオープンされたクテーブルの数
+- Open tables
+  - 現在オープンされているテーブルの数
+### SHOWコマンド
+- データベースオブジェクトの情報やさまざまな状態を表示する
+- SHOW DATABASES
+  - 現在接続中のユーザーがアクセス可能なデータベースの一覧を表示
+- SHOW TABLES
+  - カレントデータベース内に存在するテーブル及びビューの一覧を表示
+- SHOW CREATE TABLE table_name
+  - 指定したテーブルのCREATE文を返す
+- SHOW COLUMNS FROM table_name
+  - 指定したテーブルまたはビューを構成するカラムの情報を表示
+  - DESC table_name でも同じ結果を表示
+
+### サーバーや接続の動作オプションを見る
+SHOW GLOBAL VARIABLES, SHOW SESSION VARIABLES（SHOW VARIABLES）
+
+MySQLシステム変数の値を確認したいときには、SHOW VARIABLESを使用する。\
+セッション変数は@@SESSION、グローバル変数は@@GLOBALそれぞれの要素として確認できる。
+
+### 動作中の状態を見る
+- SHOW STATUSコマンド
+  - MySQLサーバーの実行状態に関する値を表示。メモリやディスクの使用状態、接続数に関する情報などが含まれている。
+- SHOW PROCESSLIST
+  - その時点で稼働中のプロセスを一覧表示
+
+### 発生したエラーや警告を見る
+最後に実行したクエリーで発生したエラーや警告の内容を確認するには、SHOW ERRORS, SHOW WARNINGS命令が便利
