--- a/content/posts/2021-09-13-MySQL徹底入門を読んで.md
+++ b/content/posts/2021-09-13-MySQL徹底入門を読んで.md
@@ -185,7 +185,7 @@ MySQLのパフォーマンス問題の多くはクエリ単位に分解して考
     - データベース単位で原則の権限を付与（GRANT）
     - 必要に応じてテーブル単位で拒否（REVOKE/partial_revokes オプションが必要）
 
-## MySQLのさまざまな状態をみる
+# MySQLのさまざまな状態をみる
 STATUSコマンド
 - 動作中のMySQLサーバーや、接続に関する基本的な情報を表示
 - Current user
@@ -200,7 +200,7 @@ STATUSコマンド
   - MySQLサーバーが起動してからオープンされたクテーブルの数
 - Open tables
   - 現在オープンされているテーブルの数
-### SHOWコマンド
+## SHOWコマンド
 - データベースオブジェクトの情報やさまざまな状態を表示する
 - SHOW DATABASES
   - 現在接続中のユーザーがアクセス可能なデータベースの一覧を表示
@@ -212,17 +212,53 @@ STATUSコマンド
   - 指定したテーブルまたはビューを構成するカラムの情報を表示
   - DESC table_name でも同じ結果を表示
 
-### サーバーや接続の動作オプションを見る
+## サーバーや接続の動作オプションを見る
 SHOW GLOBAL VARIABLES, SHOW SESSION VARIABLES（SHOW VARIABLES）
 
 MySQLシステム変数の値を確認したいときには、SHOW VARIABLESを使用する。\
 セッション変数は@@SESSION、グローバル変数は@@GLOBALそれぞれの要素として確認できる。
 
-### 動作中の状態を見る
+## 動作中の状態を見る
 - SHOW STATUSコマンド
   - MySQLサーバーの実行状態に関する値を表示。メモリやディスクの使用状態、接続数に関する情報などが含まれている。
 - SHOW PROCESSLIST
   - その時点で稼働中のプロセスを一覧表示
 
-### 発生したエラーや警告を見る
+## 発生したエラーや警告を見る
 最後に実行したクエリーで発生したエラーや警告の内容を確認するには、SHOW ERRORS, SHOW WARNINGS命令が便利
+
+## レプリケーション
+レプリケーションは「複数のMySQLサーバのデータを同期する」ための仕組みで、3.23 以前から20年以上にわかって提供し続けている枯れた機能
+
+## レプリケーションの仕組み
+MySQLのレプリケーションの構成では「マスターとスレーブに同一のデータを用意する」「」マスターに更新SQLを実行する」「マスターからスレーブに更新SQLを転送する」「スレーブが転送された更新SQLの内容をリプレイする」ことでデータを同期する。\
+「まったく同じデータを持ったMySQLに対して」「まったく同じSQLを実行すれば」「実行後のデータはまったく同じになる」という「結果整合性モデル」でレプリケーションは動作する。
+
+## （非同期）レプリケーションのデータ同期
+古くからあるこの方式では、「クライアントから更新SQLを受け杖ける（唯一の）サーバー」を「マスター」、「マスターから間接的に更新SQLの内容を受け取るサーバー」を「スレーブ」と呼び、その関係は非対称。\
+マスターにはBinlog Dumpと呼ばれるスレッドが待機しており、このスレッドがバイナリログの更新を検知してスレーブにバイナリログイベントを送信する。Binlog Dumpスレッドはマスターと接続しているスレーブに対応して1対1で常駐する。\
+Binlog Dumpスレッドに対応する形でスレーブには「（スレーブ）I/O」が起動しており、この2つのスレッドがTCP通信でコネクションを開いている。コネクションからバイナリログイベントが送信されてくると、それをI/Oスレッドが受信してリレーログと呼ばれるファイルに記録する。\
+スレーブにはさらに「（スレーブ）SQL」スレッドが常駐しており、リレーログの更新を待ち受けている。このSQLスレッドがリレーログからバイナリログイベントを取り出し、スレーブ上のデータに対してリプレイすることで、マスターとスレーブのデータが同一となる。
+このリプレイ時にスレーブにはスレーブサーバー常に新たにバイナリログを記録する。
+
+- 非同期レプリケーションと準同期レプリケーション
+  - 非同期レプリケーション
+    - 「マスター上のデータとバイナリログの更新は同期を保証」「それ以降のスレーブへの電波については時間を保証しない」設定
+  - 準同期レプリケーション
+    - 「マスター上のデータとバイナリログ、および（最低1台の）スレーブのリレーログへの更新は同期を保証」「最初の1台以外のスレーブ、および最初のスレーブにおいてもリレーログからデータの反映は、時間を保証しない」設定
+  - 非同期レプリケーションと準同期レプリケーションの違いは、（主にマスタークラッシュ時の）データの永続性にある
+    - データの信頼性に対する観点では非同期レプリケーションがおすすめ
+- マルチソースレプリケーション
+  - 「マスター多：スレーブ1」の構成のこと
+    - 「ソース」はバイナリログイベントを受け付ける「元」を表す。つまり、複数マスター構成
+  - 「テーブル構成は同等だがユーザーIDなどによって収容先のMySQLが分かれている」（= シャーディングされている）構成をひとつのMySQLにまとめる、などの使い方をすることも可能
+- 多段レプリケーション構成
+  - スレーブがマスターから受け取りリプレイしたバイナリログイベントを、さらにスレーブ自身のバイナリログに記録することによって、「1次スレーブをマスターに見立てた2次スレーブ」を構築できる。
+    - 「多段レプリケーション構成」、「カスケードレプリケーション」などと呼び、1次スレーブを「子スレーブ」「中間マスター」「中間スレーブ」、2次スレーブを「孫スレーブ」などと呼ぶ
+- グループレプリケーションのデータ同期
+  - グループレプリケーションでは「クライアントからの更新SQLを受け付けるサーバー」を「プライマリー」と呼びそれ以外のサーバーを「セカンダリー」と呼びます。
+  - 「プライマリーが1台のみ選出されるシングルプライマリーモード」と「すべてのサーバーがプライマリーになるマルチプライマリーモード」の両モードが存在し、とくに後者の場合はマスター/スレーブ構成とは大きく異なる。
+  - 更新SQLを受け付けたプライマリーサーバーはグループコミュニケーションエンジンに更新SQLの内容を渡し、各サーバーのグループコミュニケーションエンジン同士がサーティフィケーションと呼ばれる処理を経てリレーログに書き込む。
+    - サーティフィケーションは書き込みの競合チェックを行う処理で、異なるノードの同じ行に対して行われた更新を検出して、競合したトランザクションをロールバックする。コミットが先に行われたトランザクションのみが成功し、それ以外のトランザクションは失敗させることで一貫性が保たれる仕組み
+
+レプリケーションはデータの複製のための機能。マスターへの更新はバイナリログから始まる形でスレーブに非同期に差分更新される。
